REFACTOR: MainData -Company  -  Include input fields for the logo, CV title, and subtitles

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2305,6 +2305,22 @@
   "boilerplate.containers.Payroll.MainData.codes.JobsList": "قائمة الوظائف",
   "boilerplate.containers.Payroll.MainData.codes.OrganizationsList": "قائمة المنظمات",
 
+  "boilerplate.containers.Payroll.MainData.codes.phone": "الهاتف",
+  "boilerplate.containers.Payroll.MainData.codes.email": "البريد الإلكتروني", 
+  "boilerplate.containers.Payroll.MainData.codes.address": "العنوان",
+  "boilerplate.containers.Payroll.MainData.codes.submit": "إرسال",
+  "boilerplate.containers.Payroll.MainData.codes.useGPS": "استخدام نظام تحديد المواقع (GPS)",
+  "boilerplate.containers.Payroll.MainData.codes.arabicOverview": "نظرة عامة بالعربية",
+  "boilerplate.containers.Payroll.MainData.codes.englishOverview": "نظرة عامة بالإنجليزية",
+  "boilerplate.containers.Payroll.MainData.codes.cvarTitle": "عنوان ال cv بالعربية", 
+  "boilerplate.containers.Payroll.MainData.codes.cvarSubTitle": "عنوان ال cv الفرعي بالعربية",
+  "boilerplate.containers.Payroll.MainData.codes.cvenTitle": "عنوان ال cv بالإنجليزية",
+  "boilerplate.containers.Payroll.MainData.codes.cvenSubTitle": "عنوان ال cv الفرعي بالإنجليزية",
+  "boilerplate.containers.Payroll.MainData.codes.apiKey": "مفتاح ال API",
+  "boilerplate.containers.Payroll.MainData.codes.fileSizeShouldBeLessThan10MB": "يجب أن يكون حجم الملف أقل من 10 ميجابايت",
+  "boilerplate.containers.Payroll.MainData.codes.uploadLogo": "تحميل الشعار",
+  "boilerplate.containers.Payroll.MainData.codes.logoIsRequired": "الشعار مطلوب",
+
   "boilerplate.containers.Payroll.Request.Transaction.PermissionsList": "قائمة الأذونات",
   "boilerplate.containers.Payroll.Request.Transaction.employeeId": "كود الموظف",
   "boilerplate.containers.Payroll.Request.Transaction.employeeName": "اسم الموظف",
