--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2242,6 +2242,22 @@
   "boilerplate.containers.Payroll.MainData.codes.JobsList": "Jobs list",
   "boilerplate.containers.Payroll.MainData.codes.OrganizationsList": "Organizations list",
 
+  "boilerplate.containers.Payroll.MainData.codes.phone": "Phone",
+  "boilerplate.containers.Payroll.MainData.codes.email": "Email",
+  "boilerplate.containers.Payroll.MainData.codes.address": "Address",
+  "boilerplate.containers.Payroll.MainData.codes.submit": "Submit",
+  "boilerplate.containers.Payroll.MainData.codes.useGPS": "Use GPS",
+  "boilerplate.containers.Payroll.MainData.codes.arabicOverview": "Arabic Overview",
+  "boilerplate.containers.Payroll.MainData.codes.englishOverview": "English Overview",
+  "boilerplate.containers.Payroll.MainData.codes.cvarTitle": "CV Title (Arabic)",
+  "boilerplate.containers.Payroll.MainData.codes.cvarSubTitle": "CV Subtitle (Arabic)",
+  "boilerplate.containers.Payroll.MainData.codes.cvenTitle": "CV Title (English)",
+  "boilerplate.containers.Payroll.MainData.codes.cvenSubTitle": "CV Subtitle (English)",
+  "boilerplate.containers.Payroll.MainData.codes.apiKey": "API Key",
+  "boilerplate.containers.Payroll.MainData.codes.fileSizeShouldBeLessThan10MB": "File size should be less than 10MB",
+  "boilerplate.containers.Payroll.MainData.codes.uploadLogo": "Upload Logo",
+  "boilerplate.containers.Payroll.MainData.codes.logoIsRequired": "Logo is required",
+
   "boilerplate.containers.Payroll.Request.Transaction.PermissionsList": "Permissions List",
   "boilerplate.containers.Payroll.Request.Transaction.employeeId": "Employee Id",
   "boilerplate.containers.Payroll.Request.Transaction.employeeName": "Employee Name",
