--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1262,6 +1262,8 @@
   "boilerplate.containers.Payroll.Attendance.employeeName": "Employee Name",
   "boilerplate.containers.Payroll.Attendance.missionDays": "Mission Days",
   "boilerplate.containers.Payroll.Attendance.weekend": "Weekend",
+  "boilerplate.containers.Payroll.Attendance.reqDayNotAllow": "Request Not Allowed on This Day",
+  "boilerplate.containers.Payroll.Attendance.reqBeforeShiftInMinute": "Request Not Allowed Before Shift Start by Minute",
 
   "boilerplate.containers.Payroll.Attendance.absence":"Absence",
   "boilerplate.containers.Payroll.Attendance.shift":"Shift",
