IMPROVE: Create PayrollTable component

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1007,7 +1007,19 @@
   "boilerplate.containers.Payroll.applynewshift": "تطبيق الوردية الجديده",
   "boilerplate.containers.Payroll.employees": "عرض الموظفين",
   "boilerplate.containers.Payroll.VacationName": "الاجازة",
-  "boilerplate.containers.Payroll.company": "الشركة",
+  "boilerplate.containers.Payroll.nextPage": "الصفحة التالية",
+  "boilerplate.containers.Payroll.previousPage": "الصفحة السابقة",
+  "boilerplate.containers.Payroll.rowsPerPage": "صفوف لكل صفحة",
+  "boilerplate.containers.Payroll.of": "من",
+  "boilerplate.containers.Payroll.downloadCSV": "تنزيل CSV",
+  "boilerplate.containers.Payroll.viewColumns": "عرض الأعمدة",
+  "boilerplate.containers.Payroll.filterTable": "تصفية الجدول",
+  "boilerplate.containers.Payroll.all": "الكل",
+  "boilerplate.containers.Payroll.filters": "الفلاتر",
+  "boilerplate.containers.Payroll.showColumns": "إظهار الأعمدة",
+  "boilerplate.containers.Payroll.showHideTableColumns": "إظهار/إخفاء أعمدة الجدول",
+  "boilerplate.containers.Payroll.rowSelected": "الصفوف المحددة",
+  "boilerplate.containers.Payroll.deleteSelectedRows": "حذف الصفوف المحددة",
   "boilerplate.containers.Payroll.confirmationMess": "رسالة تأكيد",
 
   "boilerplate.containers.Payroll.Actions": "الإجراءات",
