--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -985,7 +985,7 @@
   "boilerplate.containers.Payroll.company": "Company",
   "boilerplate.containers.Payroll.december": "December",
   "boilerplate.containers.Payroll.employees": "View Employees",
-  "boilerplate.containers.Payroll.confirmationMess": "confirmation message",
+  "boilerplate.containers.Payroll.confirmationMess": "Confirmation Message",
 
   "boilerplate.containers.Payroll.VacationName": "Vacation",
   "boilerplate.containers.Payroll.Actions": "Actions",
@@ -996,6 +996,19 @@
   "boilerplate.containers.Payroll.percentage": "Percentage",  
   "boilerplate.containers.Payroll.relation": "Relation",  
   "boilerplate.containers.Payroll.branch": "Company",
+  "boilerplate.containers.Payroll.nextPage": "Next Page",
+  "boilerplate.containers.Payroll.previousPage": "Previous Page",
+  "boilerplate.containers.Payroll.rowsPerPage": "Rows Per Page",
+  "boilerplate.containers.Payroll.of": "Of",
+  "boilerplate.containers.Payroll.downloadCSV": "Download CSV",
+  "boilerplate.containers.Payroll.viewColumns": "View Columns",
+  "boilerplate.containers.Payroll.filterTable": "Filter Table",
+  "boilerplate.containers.Payroll.all": "All",
+  "boilerplate.containers.Payroll.filters": "Filters",
+  "boilerplate.containers.Payroll.showColumns": "Show Columns",
+  "boilerplate.containers.Payroll.showHideTableColumns": "Show/Hide Table Columns",
+  "boilerplate.containers.Payroll.rowSelected": "Row(s) Selected",
+  "boilerplate.containers.Payroll.deleteSelectedRows": "Delete Selected Rows",
   
   "boilerplate.containers.Payroll.Postmonth": "Postpone to Month",
   "boilerplate.containers.Payroll.Postyear": "Postpone to Year",
