--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1743,6 +1743,7 @@
     "boilerplate.containers.Payroll.Attendance.AllTransactions": "كل التوقيعات",
     "boilerplate.containers.Payroll.Attendance.FingerType": "نوع البصمة",
     "boilerplate.containers.Payroll.Attendance.DeviceType": "الجهاز",
+    "boilerplate.containers.Payroll.Attendance.DeviceName": "اسم الجهاز",
     "boilerplate.containers.Payroll.Attendance.Location": "الموقع",
     "boilerplate.containers.Payroll.Attendance.isDrop": "الغاء فترة لموظف",
     "boilerplate.containers.Payroll.Attendance.isStop": "ايقاف فترة لموظف",
