--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1117,6 +1117,8 @@
   "boilerplate.containers.Payroll.Setting.parentName": "القائمة الرئيسية",
   "boilerplate.containers.Payroll.Setting.menuName": "اسم القائمة",
   "boilerplate.containers.Payroll.Setting.delete": "حذف",
+  "boilerplate.containers.Payroll.Setting.loan": "قرض",
+  "boilerplate.containers.Payroll.Setting.submitUniform": "طلب زي",
   "boilerplate.containers.Payroll.Setting.vacation": "إجازة",
   "boilerplate.containers.Payroll.Setting.permission": "إذن",
   "boilerplate.containers.Payroll.Setting.mission": "مهمة",
