finish fix issue in PermissionTrxCreate page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1259,6 +1259,9 @@
   "boilerplate.containers.Payroll.Attendance.calcLate": "احتساب تأخير",
   "boilerplate.containers.Payroll.Attendance.calcMinus": "احتساب متمم",
   "boilerplate.containers.Payroll.Attendance.dedRased": "خصم من الرصيد",
+  "boilerplate.containers.Payroll.Attendance.maxMinutesCountIs": "الحد الأقصى لعدد الدقائق هو ",
+  "boilerplate.containers.Payroll.Attendance.maxMinutesCountMustToBeGreaterThan": "يجب أن يكون الحد الأقصى لعدد الدقائق أكبر من 0 ",
+  "boilerplate.containers.Payroll.Attendance.maxRepeatedPermissionIs": "الحد الأقصى للإذن المتكرر هو ",
   "boilerplate.containers.Payroll.Attendance.isDeducted": "تخصم من المرتب",
   "boilerplate.containers.Payroll.Attendance.deductedValue": "قيمة الخصم",
   "boilerplate.containers.Payroll.Attendance.maxRepeated": "الحد الاقصى للتكرار",
