IMPROVE: Setting - Reset Password - add password to resetAllUserPassword function data

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1090,6 +1090,7 @@
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
   "boilerplate.containers.Payroll.Setting.delete": "Delete",
   "boilerplate.containers.Payroll.Setting.loan": "Loan",
+  "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "Letting Password Empty Will Generate Random Password",
   "boilerplate.containers.Payroll.Setting.submitUniform": "Submit Uniform",
   "boilerplate.containers.Payroll.Setting.vacation": "Vacation",
   "boilerplate.containers.Payroll.Setting.permission": "Permission",
