remove rquired from some fields , add colores in cells table, restyle some fields in CalculateAttendance page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1343,8 +1343,8 @@
   "boilerplate.containers.Payroll.Attendance.id": "الهوية",
   "boilerplate.containers.Payroll.Attendance.shiftDate": "تاريخ الوردية",
   "boilerplate.containers.Payroll.Attendance.late": "تأخير",
-  "boilerplate.containers.Payroll.Attendance.durationUntilEnd": "متمم",
-  "boilerplate.containers.Payroll.Attendance.acutanceLeave": "بدل راحة",
+  "boilerplate.containers.Payroll.Attendance.LessTime": "متمم",
+  "boilerplate.containers.Payroll.Attendance.AccuredLeave": "بدل راحة",
   "boilerplate.containers.Payroll.Attendance.manual": "يدوي",
   "boilerplate.containers.Payroll.Attendance.stop": "ايقاف",
   "boilerplate.containers.Payroll.Attendance.absent": "غياب",
