--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1505,8 +1505,8 @@
   "boilerplate.containers.Payroll.Attendance.id": "ID",
   "boilerplate.containers.Payroll.Attendance.shiftDate": "Shift Date",
   "boilerplate.containers.Payroll.Attendance.late": "Late",
-  "boilerplate.containers.Payroll.Attendance.durationUntilEnd": "Duration Until End",
-  "boilerplate.containers.Payroll.Attendance.acutanceLeave": "Acutance Leave",
+  "boilerplate.containers.Payroll.Attendance.LessTime": "Less Time",
+  "boilerplate.containers.Payroll.Attendance.AccuredLeave": "Accured Leave",
   "boilerplate.containers.Payroll.Attendance.manual": "Manual",
   "boilerplate.containers.Payroll.Attendance.stop": "Stop",
   "boilerplate.containers.Payroll.Attendance.absent": "Absent",
