--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2266,6 +2266,10 @@
   "boilerplate.containers.Payroll.Employee.backToEmployeeList": "العودة إلى قائمة الموظفين",
   "boilerplate.containers.Payroll.Employee.identityNumberAlreadyExist": "رقم الهوية موجود بالفعل",
   "boilerplate.containers.Payroll.Employee.emailAlreadyExist": "البريد الالكتروني موجود مسبقا",
+  "boilerplate.containers.Payroll.Employee.email": "الابميل",
+  "boilerplate.containers.Payroll.Employee.relativePhoneNumber": "رقم الهاتف للقرابة",
+  "boilerplate.containers.Payroll.Employee.mobile": "الهاتف",
+  "boilerplate.containers.Payroll.Employee.telephone": "رقم التلفون",
 
   "boilerplate.containers.Payroll.MainData.codes.id": "كود",
   "boilerplate.containers.Payroll.MainData.codes.preview": "معاينة",
