--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2197,6 +2197,8 @@
   "boilerplate.containers.Payroll.Employee.pleaseFillAllRequiredFields": "Please fill all required fields",
   "boilerplate.containers.Payroll.Employee.pleaseMakeSureInsuredFieldsHasInsuranceDate": "Please make sure insured fields have insurance date",
   "boilerplate.containers.Payroll.Employee.uploadFile": "Upload",
+  "boilerplate.containers.Payroll.Employee.userName": "Userame",
+  "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "Username Already Exist",
   "boilerplate.containers.Payroll.Employee.email": "Email",
   "boilerplate.containers.Payroll.Employee.relativePhoneNumber": "Relative Phone Number",
   "boilerplate.containers.Payroll.Employee.mobile": "Mobile",
