--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1118,6 +1118,7 @@
   "boilerplate.containers.Payroll.Setting.menuName": "اسم القائمة",
   "boilerplate.containers.Payroll.Setting.delete": "حذف",
   "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "لإنشاء كلمة مرور عشوائية، اترك النص فارغًا",
+  "boilerplate.containers.Payroll.Setting.userName": "اسم المستخدم",
   "boilerplate.containers.Payroll.Setting.loan": "قرض",
   "boilerplate.containers.Payroll.Setting.submitUniform": "طلب زي",
   "boilerplate.containers.Payroll.Setting.vacation": "إجازة",
