--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1918,6 +1918,9 @@
     "boilerplate.containers.Payroll.Payroll.val": "القيمة/العدد",
     "boilerplate.containers.Payroll.Payroll.elementType": "نوع العنصر",
     "boilerplate.containers.Payroll.Payroll.elementMode": "طبيعة العنصر",
+    "boilerplate.containers.Payroll.Payroll.CalcMethod": "طريقة الحساب",
+    "boilerplate.containers.Payroll.Payroll.NewEmpDedEl": "عنصر خصم الموظف الجديد",
+    
     "boilerplate.containers.Payroll.Payroll.source": "المصدر",
     "boilerplate.containers.Payroll.Payroll.newval": "ادخال عناصر للموظفين",
     "boilerplate.containers.Payroll.Payroll.ElementValCreateTitle": "اضافة عناصر للموظفين",
