finish ui for PeerAppraisalSetting page, finish add colors in columns in table in CalculateAttendance page , fix issue in ReplaceAnnualLeaveBalanceCreate page with re back translation for api error messages, add condition in axios file for response error status 400

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1024,6 +1024,8 @@
   "boilerplate.containers.Payroll.deleteSelectedRows": "حذف الصفوف المحددة",
   "boilerplate.containers.Payroll.confirmationMess": "رسالة تأكيد",
 
+  "boilerplate.containers.Payroll.view": "عرض",
+
   "boilerplate.containers.Payroll.Actions": "الإجراءات",
   "boilerplate.containers.Payroll.EditHrNotes": "تعديل ملاحظات الموارد البشرية",
   "boilerplate.containers.Payroll.dateErrorMes": "يجب اختيار تاريخ البدا وتاريخ الانتهاء",
