--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2273,6 +2273,7 @@
   "boilerplate.containers.Payroll.Employee.email": "الابميل",
   "boilerplate.containers.Payroll.Employee.relativePhoneNumber": "رقم الهاتف للقرابة",
   "boilerplate.containers.Payroll.Employee.mobile": "الهاتف",
+  "boilerplate.containers.Payroll.Employee.employeeNameShouldNotBeOneWord": "يجب أن يكون اسم الموظف أكثر من كلمة واحدة",
   "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "اسم المستخدم موجود بالفعل",
   "boilerplate.containers.Payroll.Employee.userName": "اسم المستخدم",
   "boilerplate.containers.Payroll.Employee.telephone": "رقم التلفون",
