--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2201,7 +2201,8 @@
   "boilerplate.containers.Payroll.Employee.pleaseFillAllRequiredFields": "Please fill all required fields",
   "boilerplate.containers.Payroll.Employee.pleaseMakeSureInsuredFieldsHasInsuranceDate": "Please make sure insured fields have insurance date",
   "boilerplate.containers.Payroll.Employee.uploadFile": "Upload",
-  "boilerplate.containers.Payroll.Employee.userName": "Userame",
+  "boilerplate.containers.Payroll.Employee.userName": "Username",
+  "boilerplate.containers.Payroll.Employee.employeeNameShouldNotBeOneWord": "Employee Name Should Be More Than One Word",
   "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "Username Already Exist",
   "boilerplate.containers.Payroll.Employee.email": "Email",
   "boilerplate.containers.Payroll.Employee.relativePhoneNumber": "Relative Phone Number",
