FIX: Navbar - Search - Add missing translation & add arabic name

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -764,6 +764,7 @@
   "boilerplate.components.Chat.ChatRoom.send": "إرسال",
   "boilerplate.components.Search.Product.placeholder": "بحث المنتج",
   "boilerplate.components.Search.Product.results": "النتائج",
+  "boilerplate.components.Search.Product.search": "البحث",
   "boilerplate.components.Product.Cart.total": "مجموع",
   "boilerplate.components.Product.Cart.unique_item": "العناصر الفريدة في السلة",
   "boilerplate.components.Product.Cart.quantity": "الكمية",
