--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1929,6 +1929,7 @@
     "boilerplate.containers.Payroll.Payroll.elementMode": "طبيعة العنصر",
     "boilerplate.containers.Payroll.Payroll.CalcMethod": "طريقة الحساب",
     "boilerplate.containers.Payroll.Payroll.NewEmpDedEl": "عنصر خصم الموظف الجديد",
+    "boilerplate.containers.Payroll.Payroll.MedInsElement": "عنصر خصم التأمين ",
     
     "boilerplate.containers.Payroll.Payroll.source": "المصدر",
     "boilerplate.containers.Payroll.Payroll.newval": "ادخال عناصر للموظفين",
