IMPROVE: Payroll Table - Add export as excel option

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -910,6 +910,7 @@
   "boilerplate.containers.Payroll.save": "حفظ",
   "boilerplate.containers.Payroll.close": "إغلاق",
   "boilerplate.containers.Payroll.cancel": "الغاء",
+  "boilerplate.containers.Payroll.downloadExcel": "تنزيل Excel",
   "boilerplate.containers.Payroll.id": "كود الموظف",
   "boilerplate.containers.Payroll.code": "الكود",
   "boilerplate.containers.Payroll.delete": "حذف",
