--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -894,6 +894,7 @@
   "boilerplate.containers.Payroll.close": "Close",
   "boilerplate.containers.Payroll.cancel": "Cancel",
   "boilerplate.containers.Payroll.id": "Id",
+  "boilerplate.containers.Payroll.downloadExcel": "Download Excel",
   "boilerplate.containers.Payroll.code": "Code",
   "boilerplate.containers.Payroll.delete": "Delete",
   "boilerplate.containers.Payroll.name": "Name",
