add id column into EditTable and into master data group pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -830,7 +830,7 @@
   "boilerplate.components.tables.codes.companyShare": "حصة الشركة من التأمينات",
   "boilerplate.components.tables.codes.salaryLimit": "حد الراتب",
   "boilerplate.components.tables.codes.jobCode": "كود الوظيفة",
-  "boilerplate.components.tables.codes.action": " ",
+  "boilerplate.components.tables.codes.action": "الإجراءات",
   "boilerplate.components.tables.codes.address": "العنوان",
   "boilerplate.components.tables.codes.note": "ملاحظات",
   "boilerplate.components.tables.codes.accno": "رقم الحساب",
