--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -829,7 +829,7 @@
   "boilerplate.components.tables.codes.insuranceOffices": "Insurance Offices",
   "boilerplate.components.tables.codes.elJob": "Element Job",
   "boilerplate.components.tables.codes.elPercent": "Element Percent",
-  "boilerplate.components.tables.codes.action": "Action",
+  "boilerplate.components.tables.codes.action": "Actions",
   "boilerplate.components.tables.codes.address": "Address",
   "boilerplate.components.tables.codes.note": "Notes",
   "boilerplate.components.tables.codes.accno": "Account Number",
@@ -889,6 +889,7 @@
   "boilerplate.components.tables.codes.transportaion": "Transportaion",
 
   "boilerplate.components.tables.codes.DepreciationPeriod": "Depreciation Period",
+
 
   "boilerplate.containers.Payroll.save": "Save",
   "boilerplate.containers.Payroll.close": "Close",
