--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2290,6 +2290,7 @@
   "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "اسم المستخدم موجود بالفعل",
   "boilerplate.containers.Payroll.Employee.userName": "اسم المستخدم",
   "boilerplate.containers.Payroll.Employee.telephone": "رقم التلفون",
+  "boilerplate.containers.Payroll.Employee.RelativesName": "اسم القريب",
 
   "boilerplate.containers.Payroll.MainData.codes.id": "كود",
   "boilerplate.containers.Payroll.MainData.codes.preview": "معاينة",
